gitops/gitlab/gitops/apps/api/overlays/dev/deployment-demop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-search-demo
  namespace: iplus
  annotations:
    configmap.reloader.stakater.com/reload: "my-configmap-demo"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: api-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-demo
    spec:
      containers:
      - name: api-search-demo
        image: docker.hasti.co/iplus1/services/demo:v0.1
        imagePullPolicy: Always
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "0.1"
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
        - containerPort: 3000
      restartPolicy: Always
